# DAG-scheduling

./: .gitmodules  CMakeLists.txt  Dockerfile  README.md  README_en.md  build.ps1  run.ps1
include/dagSched/: DAGTask.h  GeneratorParams.h  SubTask.h  utils.h
src/: SubTask.cpp  utils.cpp
src/DAGTask/: DAGTask.cpp  DAGTask_Melani.cpp  DAGTask_io.cpp
src/tests/: Nasri2019.cpp
